# matrix-webhooks

./: .flake8  .gitignore  README.md  manage.py  pyproject.toml
MatrixWebhooks/: asgi.py  custom_settings.py  settings.py  urls.py  wsgi.py
apps/: helpers.py  urls.py
apps/api/: api_v1.py  apps.py  decorators.py  exception_handlers.py  schemas.py  security.py  urls.py
apps/handlers/: __init__.py  discord.py  generic.py  github.py  gitlab.py  handlers.py
apps/home/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/home/migrations/: 0001_initial.py  0002_matrixroommodel_useraccountmodel_rooms.py  0003_alter_matrixroommodel_room_id.py  0004_waitinglistuseraccountmodel.py  0005_webhookmetrics.py
apps/home/templates/home/: base.html  bootstrap.html  index.html  landing.html  signin_modal.html  user_page.html
apps/matrix/: apps.py  bot.py  filters.py  render.py  utils.py
apps/matrix/management/commands/: initialize-bot.py  run-joinserver.py
apps/types/: __init__.py
static/: cookies-policy.html  privacy-policy.html  toc.html
