[tool.poetry]
name = "webookbot"
version = "0.1.1"
description = "bringing webhooks to matrix"
authors = ["SkanderBM <skander.bmahmoud@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
mautrix = "~0.14.10"
Jinja2 = "~3.0.3"
Markdown = "~3.3.6"
markdownify = "~0.10.3"
commonmark = "~0.9.1"
markdown2 = "~2.4.2"
python-olm = "~3.1.3"
pantalaimon = "~0.10.4"
django-ninja = "~0.17.0"
django-environ = "~0.8.1"
django-sesame = "~2.4"
uvicorn = {extras = ["standard"], version = "~0.17.5"}
django-bootstrap-v5 = "~1.0.11"
Django = "~4.0.3"
requests = "~2.27.1"
django-constance = {extras = ["database"], version = "~2.8.0"}
matrix-synapse = {extras = ["postgres"], version = "~1.55.0"}
python-dotenv = "~0.19.2"
psycopg2-binary = "~2.9.3"
redis = "~4.1.4"
django-bootstrap-icons = "~0.7.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
bandit = "1.7.4"
mypy = "0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
